--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrganWeb.tbsemente>
+﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.Semente.Semente>
 
 @{
     ViewBag.Title = "Index";
