--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.tbsemente
+﻿@model OrganWeb.Areas.Sistema.Models.Semente.Semente
 
 @{
     ViewBag.Title = "Create";
@@ -7,10 +7,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>tbsemente</h4>
         <hr />
