--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Delete.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Semente.Semente
+﻿@model OrganWeb.Areas.Sistema.Models.Sementec.Semente
 
 @{
     ViewBag.Title = "Delete";
@@ -9,9 +9,17 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>tbsemente</h4>
+    <h4>Semente</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Categoria.NOME)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Categoria.NOME)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.NOME)
         </dt>
@@ -30,8 +38,7 @@
 
     </dl>
 
-    @using (Html.BeginForm())
-    {
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
