--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Details.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Semente.Semente
+﻿@model OrganWeb.Areas.Sistema.Models.Sementec.Semente
 
 @{
     ViewBag.Title = "Details";
@@ -8,9 +8,17 @@
 <h2>Details</h2>
 
 <div>
-    <h4>tbsemente</h4>
+    <h4>Semente</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Categoria.NOME)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Categoria.NOME)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.NOME)
         </dt>
