Áreas dos menus

--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -10,7 +10,47 @@
 </head>
 <body>
     <!--https://stackoverflow.com/questions/48550955/mvc-bootstrap-navbar-not-working-after-running-nuget-updates-->
-    <div class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
+    <!--Menu Lateral-->
+    <aside id="left-panel" class="left-panel">
+        <nav class="navbar navbar-expand-sm navbar-default">
+            <div id="main-menu" class="main-menu collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        @Html.ActionLink("Início", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="menu-icon fas fa-tractor"></i>Insumos</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li>@Html.ActionLink("Semente", "Index", "Semente", new { area = "Sistema" }, new { @class = "nav-link" })</li>
+                            <li><a href="#">Item 2</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </aside>
+    <!--Fim Menu Lateral-->
+    <!--Lado direito-->
+    <div id="right-panel" class="right-panel">
+        <!-- Header-->
+        <header id="header" class="header">
+            <div class="top-left">
+                <div class="navbar-header">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+            </div>
+            <div class="top-right">
+                <div class="header-menu">
+                    <div class="header-left">
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Fim Header -->
+        <!--<div class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,19 +60,22 @@
             </div>
             <div class="navbar-collapse collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item">@Html.ActionLink("Início", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li class="nav-item">@Html.ActionLink("Semente", "Index", "Semente", new { area = "Sistema" }, new { @class = "nav-link" })</li>
+                    <li class="nav-item"></li>
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Meu Aplicativo ASP.NET</p>
-        </footer>
-    </div>
+        </div>-->
+        <div class="main-body">
+
+            <div class="container body-content">
+                @RenderBody()
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - Meu Aplicativo ASP.NET</p>
+                </footer>
+            </div>
+        </div>
+    </div> <!--Fim lado direito-->
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
