Front back Layout conectado

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Edit.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models.Sementec.Semente
+﻿@model OrganWeb.Areas.Sistema.Models._Semente.Semente
 
 @{
     ViewBag.Title = "Edit";
