--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models.Sementec.Semente>
+﻿@model IEnumerable<OrganWeb.Areas.Sistema.Models._Semente.Semente>
 
 @{
     ViewBag.Title = "Index";
