Funcionando com repositorio novo

--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Create.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models._Semente.Semente
+﻿@model OrganWeb.Areas.Sistema.Models.Semente
 
 @{
     ViewBag.Title = "Create";
@@ -7,10 +7,11 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm())
+
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Semente</h4>
         <hr />
@@ -50,3 +51,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
