--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Details.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Semente/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model OrganWeb.Areas.Sistema.Models._Semente.Semente
+﻿@model OrganWeb.Areas.Sistema.Models.Semente
 
 @{
     ViewBag.Title = "Details";
@@ -12,11 +12,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Categoria.NOME)
+            @Html.DisplayNameFor(model => model.Categoria.Nome)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Categoria.NOME)
+            @Html.DisplayFor(model => model.Categoria.Nome)
         </dd>
 
         <dt>
