--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -39,11 +39,12 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    @Html.ActionLink("Organ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 </div>
             </div>
             <div class="top-right">
                 <div class="header-menu">
+                    @Html.Partial("_LoginPartial")
                     <div class="header-left">
                     </div>
                 </div>
@@ -56,7 +57,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })}
+                @Html.ActionLink("Organ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })}
             </div>
             <div class="navbar-collapse collapse" id="navbarSupportedContent">
                 <ul class="nav navbar-nav mr-auto">
