--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <title>@ViewBag.Title - Meu Aplicativo ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/fontawesome")
+    @Scripts.Render("~/bundles/fontawesome")
 </head>
 <body>
     <!--https://stackoverflow.com/questions/48550955/mvc-bootstrap-navbar-not-working-after-running-nuget-updates-->
@@ -15,14 +17,61 @@
         <nav class="navbar navbar-expand-sm navbar-default">
             <div id="main-menu" class="main-menu collapse navbar-collapse">
                 <ul class="nav navbar-nav">
+                    <li class="menu-title">Fazenda</li>
                     <li class="active">
                         @Html.ActionLink("Início", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
                     </li>
                     <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="menu-icon fas fa-tractor"></i>Insumos</a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="menu-icon fab fa-envira"></i>Insumos</a>
                         <ul class="sub-menu children dropdown-menu">
                             <li>@Html.ActionLink("Semente", "Index", "Semente", new { area = "Sistema" }, new { @class = "nav-link" })</li>
                             <li><a href="#">Item 2</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-seedling"></i>Plantios</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fas fa-tractor"></i>Máquinas</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fas fa-layer-group"></i>Áreas</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-title">E-commerce</li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fas fa-apple-alt"></i>Produtos</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                            <li><a href="#">Item 3</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fas fa-shopping-bag"></i>Pedidos</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                            <li><a href="#">Item 3</a></li>
+                        </ul>
+                    </li>
+                    <li class="menu-item-has-children dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fas fa-cart-arrow-down"></i>Vendas</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                            <li><a href="#">Item 3</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -44,8 +93,9 @@
             </div>
             <div class="top-right">
                 <div class="header-menu">
-                    @Html.Partial("_LoginPartial")
+                    
                     <div class="header-left">
+                        @Html.Partial("_LoginPartial")
                     </div>
                 </div>
             </div>
