Registro e login usuário funcionando

--- a/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_Layout.cshtml
@@ -94,6 +94,7 @@
                 <div class="header-menu">
                     
                     <div class="header-left">
+                        @Html.Partial("_LoginPartial")
                     </div>
                 </div>
             </div>
