--- a/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
+++ b/OrganWeb/OrganWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@model OrganWeb.Models.Usuario
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Olá " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Olá " + "NOME" + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Fazer logoff</a></li>
     </ul>
