--- a/OrganWeb/OrganWeb/Content/login.css
+++ b/OrganWeb/OrganWeb/Content/login.css
@@ -8,13 +8,18 @@
     height: 100vh;
     margin: -20px 0 50px;
 }
+
 h1 {
     margin: 0;
     padding-bottom: 10px;
     color: #000000;
     letter-spacing: 3px;
 }
-h2 { text-align: center; }
+
+h2 {
+    text-align: center;
+}
+
 p {
     font-size: 14px;
     font-weight: 100;
@@ -23,16 +28,19 @@ p {
     margin: 20px 0 30px;
     padding-bottom: 10px;
 }
-span { 
+
+span {
     font-size: 12px;
     margin-bottom: 20px;
 }
+
 a {
     color: #eee;
     font-size: 14px;
     text-decoration: none;
     margin: 15px 0;
 }
+
 button {
     border-radius: 20px;
     border: 1px solid #09b76b;
@@ -52,10 +60,6 @@ button.ghost {
     background-color: transparent;
     border-color: #FFFFFF;
 }
-i {
-    color: #ddd;
-}
-
 form {
     background-color: #FFFFFF;
     display: inline-flex;
@@ -78,10 +82,10 @@ form {
     min-height: 600px;
 }
 .form-container {
-    /*position: absolute;
+    position: absolute;
     top: 0;
     left: 0%;
-    height: 100%;*/
+    height: 100%;
     transition: all 0.6s ease-in-out;
 }
 .sign-in-container {
@@ -96,12 +100,14 @@ form {
     opacity: 0;
     z-index: 1;
 }
+
 .container.right-panel-active .sign-up-container {
     transform: translateX(70%);
     opacity: 1;
     z-index: 5;
     animation: show 0.6s;
 }
+
 @keyframes show {
     0%, 39.99% {
         opacity: 0;
@@ -123,9 +129,7 @@ form {
     transition: transform 0.6s ease-in-out;
     z-index: 100;
 }
-
 .container.right-panel-active .overlay-container { transform: translateX(-150%); }
-
 .overlay {
     background: #FF416C;
     background: -webkit-linear-gradient(to right, #09b76b, #07814c);
