--- a/OrganWeb/OrganWeb/Views/Home/Index.cshtml
+++ b/OrganWeb/OrganWeb/Views/Home/Index.cshtml
@@ -2,30 +2,235 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="main-body">    
+    <div class="row">
+        <!--Tarefas-->
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-header">
+                    <h6 class="card-title box-title">Tarefas em andamento</h6>
+                    <div class="card-header-right">
+                        <ul class="list-unstyled card-option">
+                            <li><i class="ti-minus minimize-card"></i></li>
+                            <li><i class="icon-refresh"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Filtro -->
+                <div class="filter-menu dropdown float-right">
+                    <a class="nav-link" data-toggle="dropdown" aria-expanded="false" href="#!">Filtrar por: <b>Data</b><i class="feather icon-chevron-down"></i></a>
+                    <div class="filter dropdown-menu">
+                        <a class="dropdown-item nav-link dropdown" href="#!" id="bydate" data-toggle="dropdown" aria-expanded="false"><i class="icofont icofont-clock-time"></i>Data</a>
+                        <a class="dropdown-item nav-link dropdown" href="#!" id="bystatus" data-toggle="dropdown" aria-expanded="false"><i class="icofont icofont-chart-histogram-alt"></i>Status</a>
+                        <a class="dropdown-item nav-link dropdown" href="#!" id="bypriority" data-toggle="dropdown" aria-expanded="false"><i class="icofont icofont-sub-listing"></i>Prioridade</a>
+                    </div>
+                    <button class="btn btn-square badge" type="button">Nova Tarefa</button>
+                </div>
+                <!-- Fim do filtro -->
+                <div class="card-body">
+                    <div class="card-content">
+                        <div class="todo-list">
+                            <div class="tdl-holder">
+                                <div class="tdl-content">
+                                    <ul>
+                                        <li>
+                                            <label>
+                                                <input type="checkbox"><i class="check-box"></i><span>Colher morangos</span>
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>
+                                                <input type="checkbox"><i class="check-box"></i><span>Plantar batata</span>
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>
+                                                <input type="checkbox"><i class="check-box"></i><span>Jogar colheita feliz</span>
+                                            </label>
+                                        </li>
+                                        <li>
+                                            <label>
+                                                <input type="checkbox"><i class="check-box"></i><span>Comer os morangos</span>
+                                            </label>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div> <!-- /.todo-list -->
+                    </div>
+                </div> <!-- /.card-body -->
+            </div><!-- /.card -->
+        </div>
+        <!--Fim das tarefas-->
+        <!--Tabelas-->
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h6 class="card-title box-title">Vendas</h6>
+                    <div class="card-header-right">
+                        <ul class="list-unstyled card-option">
+                            <li><i class="ti-minus minimize-card"></i></li>
+                            <li><i class="icon-refresh"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="card-content">
+                        <table class="table">
+                            <thead class="thead-title">
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">First</th>
+                                    <th scope="col">Last</th>
+                                    <th scope="col">Handle</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>mdo</td>
+                                </tr>
+                                <tr class="table-list">
+                                    <th scope="row">2</th>
+                                    <td>Jacob</td>
+                                    <td>Thornton</td>
+                                    <td>fat</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Larry</td>
+                                    <td>the Bird</td>
+                                    <td>twitter</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Fim das Tabelas-->
+        <!--Progresso dos plantios-->
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h6 class="card-title box-title">Progresso dos plantios</h6>
+                    <div class="card-header-right">
+                        <ul class="list-unstyled card-option">
+                            <li><i class="ti-minus minimize-card"></i></li>
+                            <li><i class="icon-refresh"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="card-content">
+                        <!-- Modal novo plantio-->
+                            <button type="button" class="btn btn-info waves-effect" data-toggle="modal" data-target="#Modal-lightbox">Abra e verás</button>
+                            <div class="modal fade" id="Modal-lightbox" tabindex="-1" role="dialog">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-body">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+                                            <h6 class="card-title box-title"><i class="icofont icofont-plant"></i>Criar plantios</h6>
+
+                                            <form id="main" method="post" action="#" novalidate="">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-8 col-form">Nome:</label>
+                                                    <label class="col-sm-2 col-form">Cor:</label>
+                                                    <div class="col-sm-8">
+                                                        <input type="text" class="form-control" name="nome" id="nome" placeholder="Ex.: Plantio de soja">
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <input type="color" class="form-control">
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-sm">Cultura:</label>
+                                                    <div class="col-sm-12">
+                                                        <select class="form-control" id="sel1">
+                                                            <option>Soja</option>
+                                                            <option>Milho</option>
+                                                            <option>Tomate</option>
+                                                            <option>Limão</option>
+                                                        </select>
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-sm">Áreas:</label>
+                                                    <div class="col-sm-12">
+                                                        <select class="form-control" id="sel1">
+                                                            <option>Talhão 1</option>
+                                                            <option>Talhão 2</option>
+                                                            <option>Talhão 3</option>
+                                                            <option>Talhão 4</option>
+                                                        </select>
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-sm-6 col-form-label">Tipo de plantio:</label>
+                                                    <div class="col-sm-12">
+                                                        <select class="form-control" id="sel1">
+                                                            <option>1</option>
+                                                            <option>2</option>
+                                                            <option>3</option>
+                                                            <option>4</option>
+                                                        </select>
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-sm-6 col-form-label">Período inicial:</label>
+                                                    <label class="col-sm-6 col-form-label">Período final:</label>
+                                                    <div class="col-sm-6">
+                                                        <div class="input-group date">
+                                                            <span class="input-group-addon" id="basic-addon2"><i class="icofont icofont-ui-calendar"></i></span>
+                                                            <input type="date" class="form-control" name="name" id="name" placeholder="Período inicial">
+                                                        </div>
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="input-group date">
+                                                            <span class="input-group-addon" id="basic-addon2"><i class="icofont icofont-ui-calendar"></i></span>
+                                                            <input type="date" class="form-control" name="name" id="name" placeholder="Período inicial">
+                                                        </div>
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-sm-10 col-form-label">Plantio personalizado: <i class="icofont icofont-question-circle"></i></label>
+                                                    <div class="col-sm-12">
+                                                        <select class="form-control" id="sel1">
+                                                            <option>1</option>
+                                                            <option>2</option>
+                                                            <option>3</option>
+                                                            <option>4</option>
+                                                        </select>
+                                                        <span class="messages"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-sm-7"></label>
+                                                    <div class="col-sm-10">
+                                                        <button type="submit" class="btn btn-success m-b-0">Adicionar</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div> <!-- /.card-body -->
+                </div><!-- /.card -->
+            </div>
+        </div> <!--Fim progresso dos plantios-->
+
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</div> <!--Fim right side-->
